# raytracerHaskell

./: README.md  cabal.project.local  cabal.project.local~0  casper@debstation.local  img.ppm  ray.cabal  ray.hp  ray.prof  ray_uVtg
app/: BoundingBoxes.hs  Helpers.hs  LightRay.hs  Main.hs  Shapes.hs  Vector3.hs  View.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
pictures/: highrestest1.ppm  proplamb.ppm
saved_pictures/: 300rpp.ppm  dark_surrounding.ppm  glass_foreground.ppm
