cabal-version:      2.4
name:               ray
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ray
    main-is:          Main.hs
    ghc-options:
        -rtsopts
        -O2
        -threaded
        -Wall
        -Wno-name-shadowing


    -- Modules included in this executable, other than Main.
    other-modules: Vector3 LightRay Shapes Helpers View BoundingBoxes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                      , random >= 1.2
                      , mtl
                      , deepseq
                      , parallel
                      , vector
    hs-source-dirs:   app
    default-language: Haskell2010
